# waifudex

./: .gitignore  .gitmodules  README.md  index.html  mise.toml  package.json  pnpm-lock.yaml  production.key.pub  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
.github/workflows/: windows-release.yml
crates/inochi2d-sys/: Cargo.toml  build.rs  wrapper.h
crates/waifudex-inox2d-wasm/: Cargo.toml  package.json
crates/waifudex-inox2d-wasm/src/: lib.rs  param_bridge.rs  renderer.rs
crates/waifudex-mascot/: Cargo.toml  build.rs
crates/waifudex-mascot/src/: context.rs  frame.rs  lib.rs  native.rs  puppet.rs
crates/waifudex-mascot/src/native/: linux.rs  mod.rs  windows.rs
scripts/: assert-windows-inochi2d-artifacts.mjs  build-inochi2d-windows-host.ps1  build-inochi2d-windows.ps1  build-inochi2d-windows.sh  build-inochi2d.sh  cargo-xwin-toolchain-env.ps1  connect-certum-simplysign.ps1  ensure-windows-host-build-env.ps1  ensure-wsl-dev-windows-env.sh  generate-dependency-inventory.mjs  generate-updater-json.mjs  import-msvc-dev-shell.ps1  invoke-certum-signtool.ps1  normalize-tauri-windows-build-config.mjs  release-version-bump.mjs  setup-windows-host-build-env.ps1  setup-wsl-dev-windows-env.sh  sync-app-version.mjs  tauri-build-windows-host.ps1  tauri-dev-windows.sh  tauri-release-windows-host.ps1  verify-certum-signature.ps1  wsl-exec.sh
src/: App.svelte  App.test.ts  App.tsx  app.css  app.d.ts  main.ts  main.tsx  svelte.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.build.conf.json  tauri.windows.conf.json  tauri.windows.updater.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_settings.rs  app_update.rs  external_link.rs  lib.rs  main.rs  mascot.rs  mascot_commands.rs  mascot_motion.rs  mascot_window.rs  runtime_state.rs  tray.rs  window.rs
src-tauri/src/codex/: discovery.rs  liveness.rs  mod.rs  monitor.rs  parser.rs  reducer.rs  session_reader.rs
src-tauri/src/codex/backend/: command_runner.rs  local_fs.rs  mod.rs  wsl_command.rs
src-tauri/src/contracts/: mod.rs  monitor.rs  runtime.rs
src-tauri/windows/: installer.nsi
src/components/layouts/: CommonLayout.svelte  CommonLayout.tsx  common-layout.css.ts  drag-lock.ts
src/components/settings/: MonitorPreview.tsx  SettingItem.tsx  monitor-preview.css.ts  monitorPreviewLabel.ts  monitorPreviewLayout.ts  setting-item.css.ts
src/hooks/: useAppSetting.ts  useAppUpdate.ts  useCharacterVisibility.ts
src/lib/components/: Character.svelte  StatusBubble.svelte  StatusPanel.svelte  TimelinePanel.svelte
src/lib/mascot/: motionsCleanup.test.ts  nativeMigration.test.ts  paramMapper.test.ts  paramMapper.ts  performance.test.ts  transport.test.ts  transport.ts  types.ts
src/lib/stores/: codex-state.test.ts  codex-state.ts  codexStore.svelte.ts  runtimeStore.svelte.ts  runtimeStore.test.ts
src/lib/tauri/: runtimeTransport.ts
src/lib/types/: codex.ts
src/licenses/: license-texts.d.ts  license-texts.js
src/screens/Settings/: index.css.ts  index.svelte  index.tsx
src/screens/Settings/tabs/: AboutTab.tsx  ModelTab.tsx  OpenSourceLicenseTab.tsx  SettingsDisplayTab.tsx  SettingsGeneralTab.tsx  open-source-license-tab.css.ts  tabs.css.ts
