[package]
name = "waifudex"
version = "0.1.0"
description = "A desktop mascot shell for visualizing Codex agent state."
authors = ["kentakang"]
edition = "2021"

[lib]
name = "waifudex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sysinfo = "=0.38.4"
tauri = { version = "=2.10.3", features = ["tray-icon"] }
tokio = { version = "=1.50.0", features = ["macros", "rt-multi-thread", "time"] }
