[package]
name = "waifudex"
version = "0.1.0"
description = "A desktop mascot shell for visualizing Codex agent state."
authors = ["kentakang"]
edition = "2021"
default-run = "waifudex"

[lib]
name = "waifudex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "export_runtime_contracts"
path = "src/bin/export_runtime_contracts.rs"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sysinfo = "=0.38.4"
tauri = { version = "=2.10.3", features = ["tray-icon"] }
time = { version = "=0.3.47", features = ["formatting"] }
tokio = { version = "=1.50.0", features = ["macros", "rt-multi-thread", "time"] }
ts-rs = "=12.0.1"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
waifudex-mascot = { path = "../crates/waifudex-mascot", features = ["native-inochi2d"] }

[target.'cfg(not(any(target_os = "linux", target_os = "windows")))'.dependencies]
waifudex-mascot = { path = "../crates/waifudex-mascot" }
