[package]
name = "waifudex"
version = "0.1.26"
description = "A desktop mascot shell for visualizing Codex agent state."
authors = ["shiinamachi"]
edition = "2021"
default-run = "waifudex"

[features]
contract-export = []

[lib]
name = "waifudex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[example]]
name = "export_runtime_contracts"
required-features = ["contract-export"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sysinfo = "=0.38.4"
tauri = { version = "=2.10.3", features = ["tray-icon"] }
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-opener = "=2.5.3"
tauri-plugin-updater = "=2.10.0"
tauri-runtime-wry = "=2.10.1"
time = { version = "=0.3.47", features = ["formatting"] }
tokio = { version = "=1.50.0", features = ["macros", "rt-multi-thread", "time"] }
ts-rs = "=12.0.1"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
waifudex-mascot = { path = "../crates/waifudex-mascot", features = ["native-inochi2d"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = [
  "Win32_Devices_Display",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Diagnostics_Debug",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(any(target_os = "linux", target_os = "windows")))'.dependencies]
waifudex-mascot = { path = "../crates/waifudex-mascot" }
