[package]
name = "waifudex-inox2d-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "=0.1.7"
glam = "=0.25.0"
glow = "=0.13.1"
inox2d = "=0.2.0"
inox2d-opengl = "=0.1.0"
js-sys = "=0.3.91"
serde = { version = "=1.0.228", features = ["derive"] }
serde-wasm-bindgen = "=0.6.5"
serde_json = "=1.0.149"
thiserror = "=1.0.69"
wasm-bindgen = "=0.2.114"
web-sys = { version = "=0.3.91", features = ["Document", "Element", "HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
