[package]
name = "waifudex-mascot"
version = "0.1.0"
edition = "2021"

[features]
default = []
native-inochi2d = ["dep:gl", "dep:inochi2d-sys"]

[dependencies]
gl = { version = "=0.14.0", optional = true }
inochi2d-sys = { path = "../inochi2d-sys", optional = true }
serde = { version = "=1.0.228", features = ["derive"] }
thiserror = "=2.0.18"

[target.'cfg(target_os = "linux")'.dependencies]
khronos-egl = { version = "=6.0.0", features = ["dynamic"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Graphics_OpenGL", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }
